# my-azure-storage

./: Cargo.toml  README.md
src/: azure_response_handler.rs  consts.rs  file_utils.rs  fl_requests.rs  flurl_ext.rs  lib.rs  sign_utils.rs  types.rs
src/blob/: api.rs  impl_for_azure_connection.rs  impl_for_azure_connection_with_telemetry.rs  mod.rs  models.rs  sdk.rs
src/blob_container/: api.rs  impl_for_azure_connection.rs  impl_for_azure_connection_with_telemetry.rs  mod.rs  models.rs  sdk.rs
src/block_blob/: api.rs  impl_for_azure_connection.rs  impl_for_azure_connection_with_telemetry.rs  mod.rs  sdk.rs
src/connection/: azure_connection.rs  azure_connection_info.rs  azure_connection_trait.rs  azure_connection_with_telemetry.rs  azure_storage_connection.rs  azure_storage_connection_data.rs  azure_storage_connection_with_telemetry.rs  connection.rs  connection_info.rs  into_fl_url.rs  mod.rs
src/connection/file/: file_connection_data.rs  file_engine.rs  mod.rs
src/connection/in_mem/: blob_data.rs  block_blob.rs  container_in_mem.rs  mem_storage_data.rs  mod.rs  operations.rs  page_blob.rs  table_storage.rs
src/my_azure_storage/: azure_response_handler.rs  connection.rs  consts.rs  errors_handling.rs  fl_requests.rs  flurl_ext.rs  mod.rs  sign_utils.rs  string_builder.rs  types.rs
src/my_azure_storage/blob/: api.rs  mod.rs  models.rs  sdk.rs
src/my_azure_storage/blob_container/: api.rs  mod.rs  models.rs  sdk.rs
src/my_azure_storage/blobs/: blob_models.rs  blobs.rs  block_blob.rs  container_models.rs  containers.rs  mod.rs  models.rs  page_blob.rs
src/my_azure_storage/block_blob/: api.rs  mod.rs  sdk.rs
src/my_azure_storage/page_blob/: api.rs  consts.rs  mod.rs  sdk.rs
src/page_blob/: api.rs  azure_page_blob_storage.rs  azure_page_blob_storage_exts.rs  consts.rs  impl_for_azure_connection.rs  impl_for_azure_connection_with_telemetry.rs  mock.rs  mod.rs  my_azure_page_blob_storage.rs  page_blob_abstractions.rs  page_blob_content_to_upload.rs  page_blob_properties.rs  sdk.rs
src/sdk_azure/: azure_response_chunk.rs  azure_response_handler.rs  blobs.rs  containers.rs  fl_requests.rs  flurl_ext.rs  mod.rs  models.rs  page_blobs.rs  sign_utils.rs
src/sdk_azure/table_storage/: connection_exts.rs  continuation_token.rs  entities_continuation_token.rs  mod.rs  query_builder.rs  table_entities_chunk.rs  (+2 more)
src/sdk_files/: blobs.rs  containers.rs  errors.rs  mod.rs  table_storage.rs  test_utils.rs  utils.rs
src/table_storage/: mod.rs  table_storage.rs  table_storage_error.rs  traits.rs
(+6 files in other folders)
