[package]
name = "my-azure-storage-sdk"
version = "0.3.3"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-xml-reader = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-xml-reader" }
flurl = { tag = "0.2.2", git = "https://github.com/MyJetTools/fl-url" }
my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-json.git" }

hmac = "*"
sha2 = "*"
base64 = "*"
chrono = "*"
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["macros"] }
async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }
