[package]
name = "my-azure-storage-sdk"
version = "0.5.0"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
table-storage = []

[dependencies]
my-xml-reader = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-xml-reader" }
flurl = { branch = "main", git = "https://github.com/MyJetTools/fl-url" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }

hmac = "*"
sha2 = "*"
base64 = "*"
chrono = "*"
tokio = { version = "*", features = ["macros"] }
async-trait = "*"
uuid = { version = "*", features = ["serde", "v4"] }
